[package]
name = "stex_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dotenvy = "0.15.7"
libsql-client = "0.32.0"
serde = { version = "1.0.189", features = ["derive"] }
stex_common = { path = "../stex_common" }
tokio = { version = "1.33.0", features = ["full"] }
