[package]
name = "stex_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dotenvy = "0.15.7"
futures = "0.3.28"
serde = { version = "1.0.189", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["sqlite"] }
stex_common = { path = "../stex_common" }
tokio = { version = "1.33.0", features = ["full"] }
